# agentpm

./: .agentpmignore  .coveragerc  .gitignore  AGENTS.md  AGENT_GENERATION_INTEGRATION.md  AGENT_WORKFLOW_COMPLIANCE_FIX_SUMMARY.md  CHANGELOG.md  CHANGELOG.md.bak  CLAUDE.md  CLAUDE.md.bak  CLEANUP_FOR_RELEASE.sh.bak  CLEAN_RELEASE_GUIDE.md  COMPLETE_SESSION_SUMMARY.md  CONTRIBUTING.md  COVERAGE-OVERRIDE-FIX.md  DATABASE_INITIALIZATION_REFACTORING.md  DOCUMENT_VISIBILITY_WORK_ITEM_SUMMARY.md  FIX_SUMMARY_TASK_1003.md  GEMINI.md  GITHUB_SETUP_OPTIONS.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_ANALYSIS.md  INSTALLATION_ANALYSIS_QUICK_REFERENCE.md  INSTALLATION_ANALYSIS_README.md  INSTALL_VERIFICATION.sh  INSTALL_VERIFICATION.sh.bak  LICENSE  LOGO_INTEGRATION_SUMMARY.md  LOGO_OPTIMIZATION_INSTRUCTIONS.md  MANIFEST.in  MIGRATION_SUMMARY.md  ONBOARDING_FLOW_SPEC.md  ONBOARDING_SUMMARY.md  ONBOARDING_USER_JOURNEY.md  OPTION_A_NEW_REPO.sh  OPTION_B_RENAME_REPO.sh  PHASE_1_COMPLETION_FINAL.md  PRE_RELEASE_CHECKLIST.md  (+34 more)
.apm/: apm.db.backup-20251025-185411
.claude/: AGENTS.md  CONTEXT.md  IDEAS.md  PRINCIPLES.md  PROJECT.md  README.md  RULES.md  UNIVERSAL-AGENT-RULES.md  WORKFLOW.md  agent-specialization-guide.md  aipm-v2-rules.md  context-system-guide.md  issue-tracking-guide.md  quick-reference.md  settings.local.json.BAK  workflow-phases.md
.claude/agents/: ac-verifier.md  ac-writer.md  agent-builder-new.md  agent-builder.md  agent-builder.md.bak  aipm-codebase-navigator.md  aipm-codebase-navigator.md.bak  aipm-database-schema-explorer.md  aipm-database-schema-explorer.md.bak  aipm-documentation-analyzer.md  aipm-plugin-system-analyzer.md  aipm-rules-compliance-checker.md  aipm-rules-compliance-checker.md.bak  aipm-test-pattern-analyzer.md  aipm-workflow-analyzer.md  aipm-workflow-analyzer.md.bak  audit-logger.md  backend-architect.md  backend-architect.md.bak  backlog-curator.md  business-panel-experts.md  business-panel-experts.md.bak  changelog-curator.md  changelog-curator.md.bak  code-analyzer.md  code-implementer.md  code-implementer.md.bak  context-assembler.md  context-delivery.md  context-delivery.md.bak  context-generator.md  context-generator.md.bak  core-designer.md  core-designer.md.bak  database-query-agent.md  debt-registrar.md  decomposer.md  deep-research-agent.md  definition-gate-check.md  definition-orch.md  (+79 more)
.claude/analysis/: detection-architecture-analysis.md
.claude/commands/: validate-task-metadata.md
.claude/hooks/: file-open.py  (+12 more)
.codex/: .codexignore  config.toml
.cursor/: .cursorignore
.junie/: guidelines.md
assets/: README.md
docs/: USER_GUIDES_CONSOLIDATION_SUMMARY.md
examples/: agent_builder_demo.py  ast_utils_demo.py.bak  database_initialization_examples.py  file_parsers_demo.py  fitness_example.py.bak  pattern_recognition_example.py.bak  sbom_generation_example.py
scripts/: README.md  README_POPULATE_CONTEXTS.md  README_POPULATE_CONTEXTS.md.bak  README_populate_agents.md  README_populate_agents.md.bak  backlog-cleanup.sh.bak  build-production.sh  check_routes.sh  cleanup-redundant-tests.py  cleanup-v1-files.sh  cleanup-v1-files.sh.bak  cleanup_boilerplate_metadata.py  cleanup_boilerplate_metadata.py.bak  consolidation_analysis.py  consolidation_analysis.py.bak  define_mini_orchestrators.py  define_mini_orchestrators.py.bak  define_sub_agents.py  define_sub_agents.py.bak  dependency_mapper.py  dependency_mapper.py.bak  dev-debug.sh  dev-server.sh.bak  ensure_database_consistency.py.bak  ensure_document_consistency.py.bak  extract-logo-icon-v2.py  extract-logo-icon-v3.py  extract-logo-icon.py  fix_document_structure.py  format_orchestrators.py  generate_all_agents.py  generate_all_agents.py.bak  generate_dependency_graph.py  generate_rules_catalog.py.bak  import_update_script.py  import_update_script.py.bak  inject_workflow_rules.py  invoke-orchestrator.sh  invoke-orchestrator.sh.bak  logo-optimizer.py  (+24 more)
test_output/: CLAUDE.md
testing/: test_all_existing_project_migrations.py  test_design_document.py  test_existing_project_migrations.py
testing/fullstack-ecommerce/: IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  package.json  pyproject.toml  pytest.ini  requirements.txt
testing/fullstack-ecommerce/.claude/agents/: django-api-integrator.md  django-backend-implementer.md  django-tester.md  planner.md  python-debugger.md  python-implementer.md  react-frontend-implementer.md  reviewer.md  specifier.md  typescript-implementer.md
testing/fullstack-ecommerce/backend/: conftest.py  requirements.txt
testing/fullstack-ecommerce/backend/apps/analytics/: apps.py  models.py  urls.py
testing/fullstack-ecommerce/backend/apps/orders/: apps.py  models.py  urls.py
testing/fullstack-ecommerce/backend/apps/products/: apps.py  models.py  serializers.py  urls.py  views.py
testing/fullstack-ecommerce/backend/apps/products/tests/: test_models.py
testing/fullstack-ecommerce/backend/apps/users/: apps.py  models.py  urls.py
testing/fullstack-ecommerce/backend/config/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
testing/fullstack-ecommerce/docs/architecture/: adr-001-monorepo-structure.md  adr-002-tanstack-over-redux.md  system-architecture.md
testing/fullstack-ecommerce/frontend/: package.json  tsconfig.json  vite.config.ts
testing/fullstack-ecommerce/frontend/src/: main.tsx
testing/fullstack-ecommerce/frontend/src/api/: client.ts  products.ts
testing/fullstack-ecommerce/frontend/src/components/products/: ProductCard.tsx
testing/fullstack-ecommerce/frontend/src/pages/: ProductListPage.tsx
testing/fullstack-ecommerce/frontend/src/types/: product.ts
testing/fullstack-ecommerce/frontend/tests/components/: ProductCard.test.tsx
testing/fullstack-ecommerce/infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
testing/fullstack-ecommerce/infrastructure/k8s/: deployment.yaml
tests/: __init__.py.bak  test_idea_integration.py.bak  test_pattern_recognition_service.py  test_performance_benchmarks.py  test_simplified_agent_system.py
(+2318 files in other folders)
